--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
+[Ll]ogs/
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
@@ -23,6 +24,7 @@ ExportedObj/
 *.svd
 *.pdb
 *.opendb
+.idea/
 
 # Unity3D generated meta files
 *.pidb.meta
